--- a/no-anime.html
+++ b/no-anime.html
@@ -129,6 +129,7 @@ Survival, Education, Destruction, Protection, Concealment.
             <div class="terminal-submit" style="display: inline-flex; padding: 10px">
                 <button class="submitbtn btn btn-outline-info btn-lg" type="button" id="submit" style="margin: 10px; margin-left: 45%;">&nbsp;部&nbsp;&nbsp;署&nbsp;</button>
                 <button class="submitbtn btn btn-outline-info btn-lg" type="button" id="reset" style="margin: 10px; margin-left: 45%;">&nbsp;重&nbsp;&nbsp;置&nbsp;</button>
+                <button class="submitbtn btn btn-outline-info btn-lg" type="button" id="back" style="margin: 10px; margin-left: 45%;">&nbsp;返&nbsp;&nbsp;回&nbsp;</button>
             </div>
             <br/>
             <br/>
@@ -252,7 +253,8 @@ Survival, Education, Destruction, Protection, Concealment.
             }
             
             submit.addEventListener("click", deploy);
-            reset.addEvetnListener("click", generate);
+            reset.addEventListener("click", generate);
+            back.addEventListener("click", window.history.back);
             window.addEventListener('load', generate);
         </script>
     </body>
